--- a/index.html
+++ b/index.html
@@ -206,7 +206,13 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <!--button class="btn btn-success btn-large">Preorder</button-->
+            <a class="coinbase-button"
+               data-button-style="custom_large"
+               data-button-text="Preorder with Bitcoin"
+               data-code="8ce90caaa0bf6393ce89b9e3ced7d230"
+               href="https://coinbase.com/checkouts/8ce90caaa0bf6393ce89b9e3ced7d230">Preorder with Bitcoin</a>
+            <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
